--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -18,5 +18,9 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "eslint": "^8.25.0"
-  }
+  },
+  "main": "main.js",
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
