--- a/recipe-app/package.json
+++ b/recipe-app/package.json
@@ -14,6 +14,9 @@
     "vite": "^3.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "eslint": "^8.25.0"
   },
   "main": "main.js",
